Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -268,15 +268,15 @@ My thesis on \textbf{computational intelligence (CI)} was seminal to my current 
 \section{Publication list}
 \nociteJournals{*}
 \bibliographystyleJournals{plainyr-rev}
-\bibliographyJournals{journals}
+\bibliographyJournals{bib/journals}
 
 \nociteChapters{*}
 \bibliographystyleChapters{plainyr-rev}
-\bibliographyChapters{chapters}
+\bibliographyChapters{bib/chapters}
 
 \nociteConferences{*}
 \bibliographystyleConferences{plainyr-rev}
-\bibliographyConferences{conferences}
+\bibliographyConferences{bib/conferences}
 %-----------------------------------------------------------------
 -----------------------
 %	COMPUTER SKILLS SECTION
