Update on Overleaf.

--- a/tex/bib/conferences.bib
+++ b/tex/bib/conferences.bib
@@ -25,7 +25,7 @@
   doi={10.1007/978-3-642-32650-9\_4},
   year={2012}
 }
-@incollection{BezLopStu2013,
+@incollection{BezLopStu2013evo,
 year={2013},
 isbn={978-3-642-37197-4},
 booktitle={Evolutionary Computation in Combinatorial Optimization (EvoCOP 2013)},
@@ -38,7 +38,7 @@ publisher={Springer Berlin Heidelberg},
 author={Bezerra, Leonardo C. T. and L{\'o}pez-Ib{\'a}{\~n}ez, Manuel and St{\"u}tzle, Thomas},
 pages={85-96}
 }
-@incollection{BezLopStu2014a,
+@incollection{BezLopStu2014lion,
  year={2014},
  booktitle={Learning and Intelligent Optimization (LION 2014)},
  series={Lecture Notes in Computer Science},
@@ -49,7 +49,7 @@ pages={85-96}
  pages={157-172},
  volume={8426}
 }
-@incollection{BezLopStu2014b,
+@incollection{BezLopStu2014ppsn,
  year={2014},
  booktitle={Parallel Problem Solving from Nature – PPSN XIII},
  editor={Bartz-Beielstein, Thomas and Branke, Jürgen and Filipič, Bogdan and Smith, Jim},
@@ -82,7 +82,7 @@ pages={85-96}
  author={Bezerra, Leonardo~C.~T. and L{\'o}pez-Ib{\'a}{\~n}ez, Manuel and St{\"u}tzle, Thomas},
  pages={396-410}
 }
-@incollection{BezLopStu2017,
+@incollection{BezLopStu2017igd,
  year={2017},
  booktitle={Evolutionary Multi-Criterion Optimization (EMO 2017)},
  series={Lecture Notes in Computer Science},
