--- a/tex/bib/journals.bib
+++ b/tex/bib/journals.bib
@@ -62,7 +62,7 @@
   author = {Gabriela {Cavalcante da Silva} and Fernanda {Monteiro de Almeida} and Sabrina M. {de Oliveira} and Elizabeth F. Wanner and Bezerra, Leonardo~C.~T. and Ricardo H.C. Takahashi and Luciana Lima},
 }
 
- @article{EndSilLimBezGomRibAlvMonLynSam2020rsbmt,  
+ article{EndSilLimBezGomRibAlvMonLynSam2020rsbmt,  
   title={\#{StayHome}: monitoring and benchmarking social isolation trends in Caruaru and the Região Metropolitana do Recife during the {COVID-19} pandemic},  
   volume={53},  
   DOI={10.1590/0037-8682-0271-2020},  
