[Data] Conferences: fixed capitalization

--- a/data/conferences/DanAndBez2022hst.bib
+++ b/data/conferences/DanAndBez2022hst.bib
@@ -1,7 +1,7 @@
 @InProceedings{DanAndBez2022hst,
   author={Dantas, Lucas H. A. and Andrade, Romerito C. and Bezerra, Leonardo~C.~T.},
   booktitle={2022 IEEE Congress on Evolutionary Computation (CEC)}, 
-  title={High school timetabling at a federal educational institute in Brazil}, 
+  title={High school timetabling at a federal educational institute in {Brazil}}, 
   year={2022},
   pages={1-8},
   doi={10.1109/CEC55065.2022.9870388},
