--- a/data/conferences/OliAraBez2022cbi.bib
+++ b/data/conferences/OliAraBez2022cbi.bib
@@ -1,7 +1,7 @@
 @InProceedings{OliAraBez2022cbi,
   author={Oliveira, Wellerson V. and Ara{\'u}jo, Daniel S.A. and Bezerra, Leonardo~C.~T.},
   booktitle={2022 IEEE 24th Conference on Business Informatics (CBI)}, 
-  title={Supermarket customer segmentation: a case study in a large Brazilian retail chain}, 
+  title={Supermarket customer segmentation: a case study in a large {Brazilian} retail chain}, 
   year={2022},
   volume={01},
   pages={70-79},
