--- a/data/conferences/AlmMarNunBez2022cbi.bib
+++ b/data/conferences/AlmMarNunBez2022cbi.bib
@@ -1,7 +1,7 @@
 @InProceedings{AlmMarNunBez2022cbi,
   author={De Almeida, Fernanda M. and Martins, Allan M. and Nunes, Marcus A. and Bezerra, Leonardo~C.~T.},
   booktitle={2022 IEEE 24th Conference on Business Informatics (CBI)}, 
-  title={Retail sales forecasting for a Brazilian supermarket chain: an empirical assessment}, 
+  title={Retail sales forecasting for a {Brazilian} supermarket chain: an empirical assessment}, 
   year={2022},
   volume={01},
   pages={60-69},
