[Data] Conferences: fixed capitalization and special characters

--- a/data/conferences/AndCarBez2021bracis.bib
+++ b/data/conferences/AndCarBez2021bracis.bib
@@ -4,7 +4,7 @@
   and Bezerra, Leonardo~ C.~T.},
   editor={Britto, Andr{\'e}
   and Valdivia Delgado, Karina},
-  title={Comparing Contextual Embeddings for Semantic Textual Similarity in Portuguese},
+  title={Comparing Contextual Embeddings for Semantic Textual Similarity in {Portuguese}},
   booktitle={Brazilian Conference on Intelligent Systems (BRACIS 2021)},
   year={2021},
   publisher={Springer International Publishing},
