--- a/data/conferences/BezLopStu2014lion.bib
+++ b/data/conferences/BezLopStu2014lion.bib
@@ -5,7 +5,7 @@
  title={Deconstructing multi-objective evolutionary algorithms: an iterative analysis on the permutation flowshop problem},
  editor={Pardalos, Panos M. and Resende, Mauricio G.C. and Vogiatzis, Chrysafis and Walteros, Jose L.},
  publisher={Springer International Publishing},
- author={Bezerra, Leonardo~C.~T. and López-Ibáñez, Manuel and Stützle, Thomas},
+ author={Bezerra, Leonardo~C.~T. and L{\'o}pez-Ib{\'a}{\~n}ez, Manuel and St{\"u}tzle, Thomas},
  pages={157-172},
  volume={8426}
 }
