--- a/data/conferences/VieAraAndBez2021isklearn.bib
+++ b/data/conferences/VieAraAndBez2021isklearn.bib
@@ -1,7 +1,7 @@
 @InProceedings{VieAraAndBez2021isklearn,
   author={Vieira, Carlos and de Ara{\'u}jo, Adelson and Andrade, Jos{\'e} E. and Bezerra, Leonardo~C.~T.},
   booktitle={2021 IEEE Congress on Evolutionary Computation (CEC)}, 
-  title={iSklearn: automated machine learning with irace}, 
+  title={{iSklearn}: automated machine learning with irace}, 
   year={2021},
   pages={2354-2361},
   doi={10.1109/CEC45853.2021.9504696},
