Update on Overleaf.

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -112,11 +112,11 @@ My thesis on \textbf{computational intelligence (CI)} was seminal to my current 
 
 \section{Projects and funding}
 
-\cventry{2023-2024}{Information technology graduate internship (class of 2024)}{5th Region Federal Regional Court (TRF5), Brazil}{R\$3,500,891.11}{Collaborator}{}
+\cventry{2023-2024}{Information technology postgraduate apprenticeship (class of 2024)}{5th Region Federal Regional Court (TRF5), Brazil}{R\$3,500,891.11}{Collaborator}{}
 
 \cventry{2022-2023}{Technological innovation cell}{Iberdrola Neoenergia COSERN, Brazil}{R\$359,234.61}{Proponent}{}
 
-\cventry{2021-2023}{Information technology graduate internship (class of 2023)}{5th Region Federal Regional Court (TRF5), Brazil}{R\$2,816,840.00}{Collaborator}{}
+\cventry{2021-2023}{Information technology postgraduate apprenticeship (class of 2023)}{5th Region Federal Regional Court (TRF5), Brazil}{R\$2,816,840.00}{Collaborator}{}
 
 \cventry{2020-2021}{Applied research and human resource education in hardware technologies for artificial intelligence}{Huawei Telecommunications in Brazil}{R\$455,375.00}{Proponent}{}
 
