Update on Overleaf.

--- a/tex/lecturer.tex
+++ b/tex/lecturer.tex
@@ -1,28 +1,3 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% "ModernCV" CV and Cover Letter
-% LaTeX Template
-% Version 1.11 (19/6/14)
-%
-% This template has been downloaded from:
-% http://www.LaTeXTemplates.com
-%
-% Original author:
-% Xavier Danaux (xdanaux@gmail.com)
-%
-% License:
-% CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
-%
-% Important note:
-% This template requires the moderncv.cls and .sty files to be in the same 
-% directory as this .tex file. These files provide the resume style and themes 
-% used for structuring the document.
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%----------------------------------------------------------------------------------------
-%	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
-%----------------------------------------------------------------------------------------
-
 \documentclass[11pt,a4paper,sans]{moderncv} % Font sizes: 10, 11, or 12; paper sizes: a4paper, letterpaper, a5paper, legalpaper, executivepaper or landscape; font families: sans or roman
 
 \moderncvstyle{casual} % CV theme - options include: 'casual' (default), 'classic', 'oldstyle' and 'banking'
@@ -69,9 +44,79 @@
 %	INTERESTS
 %----------------------------------------------------------------------------------------
 
-% \section{Interest}
 
-My thesis on \textbf{computational intelligence (CI)} was seminal to my current research on \textbf{data science (DS)}, \textbf{artificial intelligence~(AI)}, and their impact on \textbf{socially relevant problems}. Concerning DS, I supervise applied research projects with both the public and private sectors. Partners include the Brazilian Judicial Branch and Ministry of Education, as well as regional, national, and multi-national companies in fields as diverse as retail, telecommunications, and energy. Regarding AI, I supervise graduate students on theses involving deep and automated machine learning, as well as the intersection of multi-objective optimization with other CI domains, such as multi-dimensional visualization and dynamic optimization. Finally, regarding socially revelant problems, I have assisted in the fight against the COVID-19 pandemic through science publication and communication, in attempt to counter the intensive disinformation campaign held in Brazil. 
+% committed
+
+% adaptable
+
+% enthusiastic
+
+% proficient in major programming languages 
+
+% in particular Python and R 
+
+% software development principles
+
+% data science pipelines
+
+% cloud-based technologies 
+
+% adapt to teaching from level 3 to level 7
+
+% data collection, cleaning, and processing 
+
+% building and deploying models
+
+% machine learning/AI or/and advanced analytics (simulation, optimisation, forecasting, etc.)
+
+% applications to real world problems in business and industry, and the public sector.
+
+% considerable experience and demonstrated innovation in
+
+% - HE teaching
+
+% - academic leadership
+
+% - academic team management 
+
+% - curriculum development
+
+% enabling and facilitating 
+
+% - external industrial relationships
+
+% - research grant applications
+
+% - knowledge exchange
+
+
+% face-to-face and online
+
+% setting assessment, marking, and giving feedback
+
+% supervision of final year and post-graduate projects
+
+% acting as a personal tutor to provide pastoral support to students
+
+% support students for competitions
+
+% work based learning 
+
+% other opportunities for enterprise
+
+% School strategic subject based
+
+% professional or pedagogic research and development
+
+% other scholarly activities in order to support your teaching
+
+% develop their external research profile 
+
+% contribute to one or more of the School’s multidisciplinary research groups
+
+\section{Teaching}
+
+My current position at Federal University of Rio Grande do Norte~(UFRN) as a Lecturer in Big Data has provided me with the opportunity to help (re)formulate different educational programs (B.Sc. and M.Sc.) and supervise talented B.Sc., postgraduate apprenticeship, and M.Sc. students. I have also successfully co-supervised a Ph.D. student, since I was not allowed to be a main Ph.D. supervisor yet. Importantly, I have helped propose A.I./data science tracks for both the B.Sc. and M.Sc. programs, as well as a novel professional doctorate program in information technology. Finally, I have taken a proactive approach to learning, having designed and delivered 19 different course modules, which can be broadly categorized into computational thinking (ranging from abstract data types to programming interview preparation) and A.I./data science (with a focus on non-programmers). All of these course modules were designed with an emphasis on self-taught learning, which made them ideal for the COVID-19 pandemic period (and online learning thereof). In addition to having published a book chapter about the methodology I have employed, I have also partnered with Huawei Telecommunications in Brazil to provide an HCIA-AI deep learning cerfiticate training program which was offered online.% to over 200 students.
 
 % \cvlistdoubleitem{computational intelligence}{data science}
 % \cvlistdoubleitem{artificial intelligence}{accountability}
@@ -83,212 +128,75 @@ My thesis on \textbf{computational intelligence (CI)} was seminal to my current 
 %----------------------------------------------------------------------------------------
 %	HISTORY SECTION
 %----------------------------------------------------------------------------------------
-\section{History}
+\section{Educational programs}
 
-\subsection{Appointments}
-\cventry{2017-}{Assistant professor}{Federal University of Rio Grande do Norte}{Natal, RN, Brazil}{}{}
-\cventry{2016-2017}{Assistant professor}{Federal University of Paraíba}{João Pessoa, PB, Brazil}{}{}
+\subsection{Doctorate}
+\cventry{Proponent}{Information technology}{Professional}{Federal University of Rio Grande do Norte}{Natal, RN, Brazil}{}
+\cventry{2022-}{Systems and computing}{DSc}{Federal University of Rio Grande do Norte}{Natal, RN, Brazil}{}
 
-\subsection{Awards}
-\cventry{2011-2016}{Ph.D. degree in Engineering and Technology}{Université Libre de Bruxelles}{Brussels, Belgium}{}{A component-wise approach to multi-objective evolutionary algorithms: from flexible frameworks to automatic design}
-% \cventry{2009-2011}{M.Sc. in Systems and Computing}{Federal University of Rio Grande do Norte}{Natal, RN, Brazil}{}{}
-% \cventry{2004-2008}{B.Sc. in Computer Science}{Federal University of Rio Grande do Norte}{Natal, RN, Brazil}{}{}
+\subsection{Masters}
+\cventry{2022-}{Systems and computing}{MSc}{Federal University of Rio Grande do Norte}{Natal, RN, Brazil}{}
+\cventry{2018-2021}{Information technology}{Professional}{Federal University of Rio Grande do Norte}{Natal, RN, Brazil}{}
 
-% \subsection{Junior Spring Semester Project}
+\subsection{Postgraduate apprenticeship}
+\cventry{2021-2024}{Information technology}{5th Region Federal Regional Court (TRF5)}{Recife, PE, Brazil}{}{}
+\cventry{2018-2024}{Information technology}{Federal Justice Section of Rio Grande do Norte (JFRN)}{Natal, RN, Brazil}{}{}
+\cventry{2018-2024}{Information technology}{Regional Electoral Court of Rio Grande do Norte (TRE-RN)}{Natal, RN, Brazil}{}{}
+\cventry{2019-2021}{Information technology}{Court of Accounts of the State of Rio Grande do Norte (TCE-RN)}{Natal, RN, Brazil}{}{}
 
-% \cventry{2018}{Flow Mapping (Particle Image Velocimetry)}{Research Experiment}{}{}{This was an experiment in fluid dynamics with respect to a cylinder subjected to a constant flow. The water is seeded with small particles that are illuminated by a powerful laser. A cylinder is moved mechanically in various patterns mimicking theoretical 'free vibration' due to vortex shedding. The images are processed and analyzed in MATLAB and the resulting turblence/vorticity can be visualized. The forces experienced by the body are widely applicable (energy generation, structural pile requirements). Results were used in graduate student Erdem Aktosun's research.}
+\subsection{Undergratuate}
+\cventry{2017-}{Information technology}{BSc}{Federal University of Rio Grande do Norte}{Natal, RN, Brazil}{}{}
+\cventry{2017-}{Computer science}{BSc}{Federal University of Rio Grande do Norte}{Natal, RN, Brazil}{}{}
+\cventry{2017-}{Computer engineering}{BEng}{Federal University of Rio Grande do Norte}{Natal, RN, Brazil}{}{}
+\cventry{2016-2017}{Mathematical computing}{BSc}{Federal University of Paraíba}{João Pessoa, PB, Brazil}{}{}
+\cventry{2016-2017}{Computer science}{BSc}{Federal University of Paraíba}{João Pessoa, PB, Brazil}{}{}
+\cventry{2016-2017}{Computer engineering}{BEng}{Federal University of Paraíba}{João Pessoa, PB, Brazil}{}{}
 
-%----------------------------------------------------------------------------------------
-%	AWARDS SECTION
-%----------------------------------------------------------------------------------------
+\section{Supervision (apprenticeship and undergraduate)}
 
-% \subsection{Achievements}
-\cventry{2011}{F.R.I.A doctoral fellowship}{Fonds de la Recherche Scientifique (FNRS)}{Brussels, Belgium}{}{}
-\cventry{2009}{Best paper award}{Brazilian Symposium on Augmented and Virtual Reality (SVR)}{Porto Alegre, Brazil}{}{}
+\subsection{Postgraduate apprenticeship}
 
-%----------------------------------------------------------------------------------------
-%	PROJECTS
-%----------------------------------------------------------------------------------------
+\cventry{2021}{Autonomous income in the municipalities of the Rio Grande do Norte state}{Postgraduate apprenticeship on Information technology}{Paulo Roberto Oliveira de Melo}{Court of Accounts of the State of Rio Grande do Norte (TCE-RN), Federal University of Rio Grande do Norte (UFRN), Brazil}{}
 
-\section{Projects and funding}
+\cventry{2020}{A data-driven approach to aid payment auditing in the Court of Accounts of the State of Rio Grande do Norte}{Postgraduate apprenticeship on Information technology}{Gabriel Felipe Azevedo de Sousa}{Court of Accounts of the State of Rio Grande do Norte (TCE-RN), Federal University of Rio Grande do Norte (UFRN), Brazil}{}
 
-\cventry{2023-2024}{Information technology postgraduate apprenticeship (class of 2024)}{5th Region Federal Regional Court (TRF5), Brazil}{R\$3,500,891.11}{Collaborator}{}
+\cventry{2020}{Business intelligence to aid electoral accounts auditing in Rio Grande do Norte}{Postgraduate apprenticeship on Information technology}{Giuliard Cosmo Rodrigues}{Regional Electoral Court of Rio Grande do Norte (TRE-RN), Federal University of Rio Grande do Norte (UFRN), Brazil}{}
 
-\cventry{2022-2023}{Technological innovation cell}{Iberdrola Neoenergia COSERN, Brazil}{R\$359,234.61}{Proponent}{}
+\cventry{2020}{Workflow management tool review for ETL orchestration at TRE-RN}{Postgraduate apprenticeship on Information technology}{Thiago de Oliveira}{Regional Electoral Court of Rio Grande do Norte (TRE-RN), Federal University of Rio Grande do Norte (UFRN), Brazil}{}
 
-\cventry{2021-2023}{Information technology postgraduate apprenticeship (class of 2023)}{5th Region Federal Regional Court (TRF5), Brazil}{R\$2,816,840.00}{Collaborator}{}
+\subsection{Undergraduate (final year)}
 
-\cventry{2020-2021}{Applied research and human resource education in hardware technologies for artificial intelligence}{Huawei Telecommunications in Brazil}{R\$455,375.00}{Proponent}{}
+\cventry{2021}{Comparing contextual embeddings for the semantic textual similarity in Portuguese}{BEng in Computer engineering}{José Estevam de Andrade Junior}{Federal University of Rio Grande do Norte (UFRN), Brazil}{}
 
-\cventry{2017-2018}{SmartMetropolis}{Multiple local and national government branches, Brazil}{R\$3,609,907.74}{Collaborator}{}
+\cventry{2021}{Assessing irace for automated machine learning}{BSc in Computer science}{Carlos Eduardo Morais Vieira}{Federal University of Rio Grande do Norte (UFRN), Brazil}{}
 
-\cventry{2017-2018}{Revision and update of the Brazilian Standard Classification of Education (CINE Brasil 2018)}{UNESCO \& Brazilian Ministry of Education -- INEP, Brazil}{R\$1,000,000.00}{Proponent}{}
+\cventry{2019}{Using artificial intelligence to aid depression detection}{BEng in Computer engineering}{Deângela Caroline Gomes Neves}{Federal University of Rio Grande do Norte (UFRN), Brazil}{}
 
-\cventry{2015-2016}{Combinatorial optimization: metaheuristics and exact methods (COMEX)}{Belgian Federal Science Policy Office (BELSPO), Belgium}{€500,000.00}{Collaborator}{}
+\section{Course modules}
 
-\cventry{2011-2015}{Generalization of metaheuristics for optimization problems with three or more objectives}{Fonds de la Recherche Scientifique (FNRS), Belgium}{€100,000.00}{Proponent}{}
+\subsection{Computational thinking}
 
-%----------------------------------------------------------------------------------------
-%	PUBLICATIONS
-%----------------------------------------------------------------------------------------
+\cventry{2023-}{Abstract data types}{BSc in Information technology}{Federal University of Rio Grande do Norte (UFRN)}{Natal, RN, Brazil}%
+{I helped design and deliver this module on the definition and applications of abstract data types. In detail, the original course curriculum only comprised algorithms and data structures, and had an above 50\% failure rate. Introducing abstract data types prior to the data structures used to implement them significantly improved the success rate of the course, often surpassing 75\%. This is in part due to student evaluation, which is in part performed via coding interviews.}
 
-\section{Key$\star$ and relevant publications}\closesection
-\cvline{disclaimer}{\textit{An exhaustive publication list with full author description is provided at the end of the document.}}
-\subsection{Journals (5)}
-\cventry{2021}{A computational study on ant colony optimization for the traveling salesman problem with dynamic demands}{Computers \& Operations Research}{h-index: 160}{}% IF: 5.159,
-{This paper was the main contribution from the first Ph.D. thesis I co-supervised, and demonstrates how multi-objective and dynamic optimization intersect. The relevance of this paper is evidenced by its best paper award nomination at the EMO 2019 conference, where a preliminary version of the journal paper was first published. In addition, this paper is a concrete example of how I bridge different research topics into multi-disciplinary work.}  
+\cventry{2023-}{Fundamentals of multi-paradigm, high-level software development}{BSc in Information technology}{Federal University of Rio Grande do Norte (UFRN)}{Natal, RN, Brazil}%
+{I helped design this module on the fundamentals of software development using multiple programming paradigms and high-level programming languages. In detail, the original course curriculum (i)~only comprised computer programming, disregarding critical software development fundamentals such as testing and versioning; (ii)~only adopted the procedural and object-oriented programming paradigms, both from purist perspectives, and; (iii)~adopted low-level programming languages. Altogether, these factors hindered student engagement as courses were seen as unrealistic, leading to an above 50\% failure rate. Introducing software development fundamentals, how to benefit from multiple programming paradigms, and adopting high-level languages comprise a significantly improvement that is expected to raise the success rate of students.}
 
-\cventry{2021}{Comparing community mobility reduction between first and second COVID-19 waves}{Transport Policy}{h-index: 103}{}% IF: 6.173, 
-{This paper was the main contribution of my efforts in science publication and communication to assist in the fight against the COVID-19 pandemic. Indeed, the first author of this paper is one of the undergraduate students that I helped mobilize in those initiatives. The relevance of this paper is evidenced by the number of different continents and COVID-19 waves included in the assessment. In addition, this paper is a concrete example of how I use computational intelligence in the context of socially relevant problems. }
+\cventry{2019-2019}{Coding interview preparation}{BSc in Information technology}{Federal University of Rio Grande do Norte (UFRN)}{Natal, RN, Brazil}%
+{I helped design and deliver this introductory module on coding interviewing, which was created to help students prepare for real-world job interviews. The course comprised invited talks from alumni who had extensive experience in the industry (and interviewing) and coding interview problems and practice, which included invited recruiters from companies. Though experimental, this module was very important and timely as shortly after its delivery the demand for information technology professionals surged as a function of the pandemic.}
 
-% \cventry{2020}{\#StayHome: Monitoring and benchmarking social isolation trends in Caruaru and the Região Metropolitana do Recife during the COVID-19 pandemic}{Revista da Sociedade Brasileira de Medicina Tropical}{IF: 1.581}{}{}
-\cvline{}{\hrule}
-\cventry{$\star$2020}{Automatically designing state-of-the-art multi-and many-objective evolutionary algorithms}{MIT Evolutionary Computation Journal}{h-index: 84}{}% IF: 4.766,
-{}
-\cventry{$\star$2018}{A large-scale experimental evaluation of high-performing multi-and many-objective evolutionary algorithms}{MIT Evolutionary Computation Journal}{h-index: 84}{}% IF: 4.766, 
-{}
-\cventry{$\star$2016}{Automatic component-wise design of multiobjective evolutionary algorithms}{IEEE Transactions on Evolutionary Computation}{h-index: 186}{}% IF: 16.497,
-{These papers comprise the contributions of my Ph.D. thesis, having been accepted for publication prior to my defense or shortly after. Their relevance is evidenced by their ongoing impact on the evolutionary computation community, one of the most important in the context of CI, and by the rigorous journals where they were published. More importantly, these papers demonstrate how I am able to plan and deliver on a research project. In detail, each paper meets an specific objective of my thesis proposal, incrementally achieving the general objective of the project.}  
+\cventry{2018-}{Computational thinking}{BSc in Information technology}{Federal University of Rio Grande do Norte (UFRN)}{Natal, RN, Brazil}%
+{I helped design and deliver this introductory module on computational thinking. In detail, the original course curriculum introduced computer programming using a low-level textual programming language, hindering the problem-solving learning ability of the students and leading to an above 50\% failure rate. Conversely, this module introduces computational thinking from a gamified visual programming perspective, which later evolves to high-level textual programming. Using these approaches, the course is able to focus on problem-solving through computational thinking, and the success rate of this module is often above 75\%.}
 
+\cventry{2017-}{Algorithms and data structures}{BSc in Information technology}{Federal University of Rio Grande do Norte (UFRN)}{Natal, RN, Brazil}%
+{I helped design and deliver this course .}
 
-% \cventry{2013}{Analyzing the impact of MOACO components: An algorithmic study on the multi-objective shortest path problem}{Expert Systems with Applications}{IF: 8.665}{}{}
+\cventry{2017-2018}{Programming languages}{BSc in Information technology}{Federal University of Rio Grande do Norte (UFRN)}{Natal, RN, Brazil}{Something about this}
 
-% \subsection{Book chapters (1)}
-% \cventry{$\star$2020}{Automatic configuration of multi-objective optimizers and multi-objective configuration}{High-Performance Simulation-Based Optimization}{SCI}{Springer}{}
+\cventry{2016-2017}{Design and analysis of algorithms}{BSc in Computer science}{Federal University of Paraíba (UFPB)}{Paraíba, PB, Brazil}{Something about this}
 
-\subsection{Conference papers (11)}
+\cventry{2016-2017}{The scientific method}{BSc in Mathematical computing}{Federal University of Paraíba (UFPB)}{Paraíba, PB, Brazil}{Something about this}
 
-\cventry{2022}{High school timetabling at a federal educational institute in Brazil}{IEEE WCCI}{}{}{}
-\cventry{2022}{Retail sales forecasting for a Brazilian supermarket chain: an empirical assessment}{IEEE CBI}{}{}{}
-\cventry{2022}{Supermarket customer segmentation: a case study in a large Brazilian retail chain}{IEEE CBI}{}{}{}
-\cventry{$\star$2018}{Time-series features for predictive policing}{IEEE ISC2}{}{}{}
-\cventry{2018}{Towards a crime hotspot detection framework for patrol planning}{IEEE SmartCity}{}{}
-{These papers comprise the contributions of data science M.Sc. theses I (co-)supervised in partnership with public and private institutions. The relevance of these papers is evidenced by the socially relevant scenarios they address. In detail, the first paper focuses on the Brazilian Federal Network of Vocational, Scientific and Technological Education, which provides education to over two million students, with over half of the students that declared income, gender, and ethnicity coming from low income families, being women, and self-declaring as non-white. The remainder 2022 papers use AI techniques to model different business processes in the 3rd largest retail supermarket chain in the Northeast of Brazil, and is instrumental to assess the impact of the COVID-19 pandemic in the industry. Finally, the 2018 papers address predictive policing to assist the local government in the forecasting of criminal occurrences.}
-\cvline{}{\hrule}
-
-\cventry{2021}{Evaluating anytime performance on NAS-Bench-101}{IEEE CEC}{}{}{}
-\cventry{$\star$2021}{iSklearn: automated machine learning with irace}{IEEE CEC}{}{}{}
-\cventry{2021}{Comparing contextual embeddings for semantic textual similarity in Portuguese}{BRACIS}{}{}%
-{These papers are the contributions of M.Sc. theses I supervised in deep and automated machine learning. The relevance of these papers is evidenced by the state-of-the-art techniques that were employed. In addition, the application domains considered are among the most relevant that use unstructured data, namely computer vision, natural language processing, and time series forecasting. Importantly, these papers demonstrate that I understand the technological complexity of current state-of-the-art AI models, their potential impact on society, and therefore their need for accountability.}
-
-\cvline{}{\hrule}
-
-\cventry{2021}{Revisiting Pareto-optimal multi-and many-objective reference fronts for continuous optimization}{IEEE CEC}{}{}{}
-\cventry{$\star$2019}{Archiver effects on the performance of state-of-the-art multi-and many-objective evolutionary algorithms}{GECCO}{}{}{}
-\cventry{$\star$2017}{An empirical assessment of the properties of inverted generational distance on multi-and many-objective optimization}{EMO}{}{}%
-{These papers comprise follow-up works on my Ph.D. thesis. The relevance of these papers is evidenced by their ongoing impact on the evolutionary computation community, as well as the conferences where they were published, which are among the top-tier venues in their field. More importantly, these papers are a concrete example that the work I conducted in my Ph.D. was seminal to relevant future work. In addition, they demonstrate that I understand that seeking autonomy as an independent researcher does not mean discontinuing previous research.}
-
-% \cvline{}{\hrule}
-
-% \cventry{2019}{The hypervolume indicator as a performance measure in dynamic optimization}{EMO}{}{}{}
-
-
-
-
-% \cventry{2015}{To DE or not to DE? Multi-objective differential evolution revisited from a component-wise perspective}{EMO}{}{}{}
-
-% \cventry{2015}{Comparing decomposition-based and automatically component-wise designed multi-objective evolutionary algorithms}{EMO}{}{}{}
-
-% \cventry{$\star$2014}{Automatic design of evolutionary algorithms for multi-objective combinatorial optimization}{PPSN}{}{}{}
-
-% \cventry{2014}{Deconstructing multi-objective evolutionary algorithms: An iterative analysis on the permutation flow-shop problem}{LION}{}{}{}
-
-% \cventry{2013}{An analysis of local search for the bi-objective bidimensional knapsack problem}{EvoCOP}{}{}{}
-
-% \cventry{2012}{Automatic generation of multi-objective ACO algorithms for the bi-objective knapsack}{ANTS}{}{}{}
-
-% \cventry{2011}{GRACE: a generational randomized ACO for the multi-objective shortest path problem}{EMO}{}{}{}
-
-% \cventry{2009}{FAITH: a desktop virtual reality system for fingerspelling}{SVR}{}{}{}
-
-%----------------------------------------------------------------------------------------
-%	SUPERVISION
-%----------------------------------------------------------------------------------------
-
-\section{Supervision}
-
-% \subsection{Ph.D. theses}
-
-\cventry{2022}{Design configuration for the MMAS algorithm applied to the travelling salesman problem with dynamic demands}{Ph.D. thesis co-supervisor}{Sabrina M. de Oliveira}{Computational mathematical modeling, Federal Center of Technological Education of Minas Gerais (CEFET-MG), Brazil}{}
-
-% \subsection{M.Sc. theses}
-
-\cventry{2021}{A case study on customer segmentation of a supermarket chain}{M.Sc. thesis supervisor}{Wellerson V. Oliveira}{Information technology, Federal University of Rio Grande do Norte (UFRN), Brazil}{}
-
-\cventry{2021}{Sales forecasting for a supermarket chain in Natal, Brazil: an empirical assessment}{M.Sc. thesis supervisor}{Fernanda M. de Almeida}{Information technology, Federal University of Rio Grande do Norte (UFRN), Brazil}{}{}
-
-\cventry{2021}{Assessing irace for automated machine and deep learning in computer vision}{M.Sc. thesis supervisor}{Carlos E. M. Vieira}{Information technology, Federal University of Rio Grande do Norte (UFRN), Brazil}{}{}
-
-\cventry{2018}{Uma abordagem metaheurística para o problema de alocação de horário escolar no IFRN}{M.Sc. thesis supervisor}{Lucas H. A. Dantas}{Systems and computing, Federal University of Rio Grande do Norte (UFRN), Brazil}{}{}
-
-\cventry{2018}{Predizendo hotspots criminais com aprendizado de máquina}{M.Sc. thesis co-supervisor}{Adelson D. de Araújo Júnior}{Systems and computing, Federal University of Rio Grande do Norte (UFRN), Brazil}{}{}
-
-% \subsection{B.Sc. theses}
-
-% \cventry{2021}{Comparando embeddings contextuais no problema de busca de similaridade semântica em português}{Supervisor}{Information technology}{Federal University of Rio Grande do Norte (UFRN)}{}{}
-
-% \cventry{2019}{Assessing irace for automated machine learning}{Supervisor}{Computer science}{Federal University of Rio Grande do Norte (UFRN)}{}{}
-
-% \cventry{2019}{Using artificial intelligence to aid depression detection}{Supervisor}{Computer engineering}{Federal University of Rio Grande do Norte (UFRN)}{}{}
-
-
-%----------------------------------------------------------------------------------------
-%	LANGUAGES SECTION
-%----------------------------------------------------------------------------------------
-
-\section{Languages}
-
-\cvlanguage{Portuguese}{Fluent}{Mother language}
-\cvlanguage{English}{Fluent}{TOEFL iBT Score 108}
-\cvlanguage{Spanish}{Fluent}{European Union Reference Level C1}
-\cvlanguage{French}{Intermediate}{European Union Reference Level B1}
-\cvlanguage{Italian}{Intermediate}{European Union Reference Level B1}
-
-% \cvcomputer{category}{programs}{category}{programs}
-% \cvline{leftmark}{text}
-% \cvdoubleitem{subtitle}{text}{subtitle}{text}
-% \cvlistitem{point1}
-% \cvlistdoubleitem{point1}{point2}
-
-% \nocite{*}
-% \bibliographystyle{plainyr-rev}
-% \bibliography{journals,chapters}
-
-% \bibliographyunit[\section]
-% \begin{bibunit}
-% \bibliography{journals}
-% \putbib
-% \end{bibunit}
-
-% \begin{bibunit}
-% \bibliography{chapters}
-% \putbib
-% \end{bibunit}
-
-\section{Publication list}
-\nociteJournals{*}
-\bibliographystyleJournals{plainyr-rev}
-\bibliographyJournals{bib/journals}
-
-\nociteChapters{*}
-\bibliographystyleChapters{plainyr-rev}
-\bibliographyChapters{bib/chapters}
-
-\nociteConferences{*}
-\bibliographystyleConferences{plainyr-rev}
-\bibliographyConferences{bib/conferences}
-%-----------------------------------------------------------------
------------------------
-%	COMPUTER SKILLS SECTION
-%----------------------------------------------------------------------------------------
-
-% \section{Skills}
-
-% \cvitem{Softwares:}{MATLAB, Excel/Office, STWAVE (modelling) PTC Creo (Limited), Python (Limited)}
-% \subsection{Equipment/Hardware Skills}
-% \cvitem{Wave Tank:}{Hydraulic Wavemaker, Load cell, Wave-guage operation}
-% \cvitem{Flow Map:}{Flow Tank, Dye pumps (visualization), Class IV Laser operation}
-% \cvitem{Acoustics:}{Oscilloscope, Function Generator, Humminbird 1158c Transducer}
-
+\cventry{2016-2017}{Graph applications}{BSc in Mathematical computing}{Federal University of Paraíba (UFPB)}{Paraíba, PB, Brazil}{Something about this}
 
 \end{document}
